--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@
 .input-group{
     width: auto;
 }
+
+a{
+    text-decoration: none;
+    color: rgb(75, 75, 73);
+    margin: 0 10px;
+    padding-bottom: 4px;
+}
+.nav-NavLink.active{
+    color: rgb(0 118 186);
+}
+.headLines.active{
+    color: rgb(97, 58, 0);
+    border-bottom: 2px solid rgb(97, 58, 0);
+}
+@media(max-width: 900px){
+    .everything_Flex{
+        flex-direction: column;
+    }
+}
